<resources>
    <string name="app_name">Materna</string>

    <string name="some_stats">Total donations made 100$\n\nDelivery at proccess\nToday, 14:40 to 14:50\n\nPending delivery \n10/2/18 around 8:25\n\nPending delivery \n15/2/18 around 10:40</string>
    <string name="some_story_short">a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a page</string>
    <string name="some_story_long">using Lorem Ipsum is that it has a normal distribution of letters, as opposed to using  making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like)</string>

    <!--System Messages-->
    <string name="field_cant_be_empty">Field cannot be empty</string>
    <string name="could_not_register">Could not register</string>
    <string name="sending_request">Sending Request...</string>

    <!--System Prompts-->
    <string name="delete_product">Are you sure you want to delete this product ?</string>

    <!--UI-->
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="donate">Donate</string>
    <string name="donation">Donation</string>
    <string name="sign_out">Sign out</string>
    <string name="setting">Setting</string>
    <string name="delete">Delete</string>
    <string name="my_profile">My Profile</string>
    <string name="read_more">Read More</string>
    <string name="close">Close</string>
    <string name="donate_money">Donate Money</string>
    <string name="donate_food">Donate Food</string>
    <string name="buy_food">Buy Food</string>
    <string name="give_personally">Give Personally</string>
    <string name="delivery">Delivery</string>
    <string name="collection_points">Collection Points</string>
    <string name="notifications">Notifications</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="home_address">Home Address</string>
    <string name="dashboard">Dashboard</string>


</resources>
