<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/very_small_margin"
    app:cardBackgroundColor="@color/list_item_story"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/small_margin">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="Title of the story"
            android:textSize="@dimen/large_text" />


        <TextView
            android:id="@+id/tv_story_short"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/some_story_short"
            android:textSize="@dimen/medium_text" />

        <TextView
            android:id="@+id/tv_story_long"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/some_story_long"
            android:textSize="@dimen/medium_text"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_more_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="..."
            android:textSize="@dimen/very_large_text"
            android:textStyle="bold"
            android:visibility="visible" />

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:cardBackgroundColor="#32000000"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp">

            <TextView
                android:id="@+id/tv_btn_expand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/very_small_margin"
                android:text="@string/read_more"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/small_text" />
        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.v7.widget.CardView>