<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.gglabs.materna.ViewController.Donate.DonateFoodActivity">

    <include layout="@layout/toolbar_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/ui_black_transparent_bg"
        android:orientation="vertical"
        android:padding="@dimen/small_margin">

        <LinearLayout
            android:id="@+id/lay_menu"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_give_personally"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_pan_tool_black_48px"
                android:tint="@color/green" />

            <ImageView
                android:id="@+id/iv_delivery"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_motorcycle_black_48px"
                android:tint="@color/red" />

            <ImageView
                android:id="@+id/iv_collection_points"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_location_on_black_48px"
                android:tint="@color/yellow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_give_personally"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/give_personally"
                android:textColor="@color/default_text_color"
                android:textSize="@dimen/medium_text" />

            <TextView
                android:id="@+id/tv_donate_food"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/delivery"
                android:textColor="@color/default_text_color"
                android:textSize="@dimen/medium_text" />

            <TextView
                android:id="@+id/tv_buy_food"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/collection_points"
                android:textColor="@color/default_text_color"
                android:textSize="@dimen/medium_text" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
