<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.gglabs.materna.ViewController.LoginActivity">

    <ProgressBar
        android:id="@+id/pb_login"
        android:layout_width="128dp"
        android:layout_height="1286dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <ScrollView
        android:layout_margin="@dimen/default_margin"
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pb_login">

        <LinearLayout
            android:id="@+id/lay_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:gravity="center"
                android:text="Sign in"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:id="@+id/lay_fields"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:visibility="gone"> <!--*Register layout*-->

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/error_appearance">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="textWebEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/error_appearance">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="textWebEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lay_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/error_appearance">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Phone number"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/error_appearance">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city"
                        android:inputType="textWebEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/error_appearance">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:inputType="textWebEmailAddress" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/error_appearance">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:inputType="textWebEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/error_appearance"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign In" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:gravity="center"
                android:text="Not registered ?"
                android:textAlignment="center" />

            <Button
                android:padding="@dimen/default_margin"
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Register" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>